Added products overview liquid

--- a/sections/products-overview.liquid
+++ b/sections/products-overview.liquid
@@ -218,8 +218,16 @@
     border-bottom: none;
   }
 
+  .pricing-option.featured .plan-features li {
+    border-bottom: 1px solid rgba(0, 255, 65, 0.1);
+  }
+
   .pricing-option.addon .plan-features li {
     border-bottom: 1px solid rgba(255, 165, 0, 0.1);
+  }
+
+  .pricing-option.coaching-card .plan-features li {
+    border-bottom: 1px solid rgba(0, 255, 65, 0.1);
   }
 
   .pricing-option {
